2013-04-21 15:47  chrox

	* add dictionary backend for 5.3.4

2013-04-16 15:13  chrox

	* bugfix parsing float string from certain locales

2013-03-20 18:27  chrox

	* add support for KOReader

2013-01-27 18:27  chrox

	* add support for Japanese and Canadian 3G PaperWhite

2013-01-21 17:53  chrox

	* add a lipc interface on dictionary backend

2013-01-21 00:11  chrox

	* open txt and html documents with native reader

2013-01-20 23:12  chrox

	* add dictionary backend

2013-01-17 17:35  chrox

	* add detail view for additional document formats

2013-01-11 21:43  chrox

	* add a backdoor to native PDF reader

2013-01-09 19:25  chrox

	* use enumeration approach to find request method

2013-01-08 10:27  chrox

	* bugfix booklet handler for Kindle Touch

2013-01-07 23:13  chrox

	* add extractors for Kindle Touch

2013-01-07 17:16  chrox

	* build update for Kindle Touch 5.1.2

2013-01-07 00:02  chrox

	* build update for Kindle Paperwhite 5.3.1
