@@ -1,3 +1,7 @@
+2013-04-21 16:41  chrox
+
+	* enable pillow after starting koreader
+
 2013-04-21 15:47  chrox
 
 	* add dictionary backend for 5.3.4
